# athena

./: Cargo.toml
res/: torus.mtl
src/: challenge.wgsl  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
src/core/math/: frustum.rs  interpolation.rs  mod.rs  quaternion.rs  transform.rs
src/mock/: mock.rs
